refactored signup and login pages to fix scaling issues on mobile devices

--- a/FlyerScan/static/css/login.css
+++ b/FlyerScan/static/css/login.css
@@ -1,38 +1,39 @@
-.login-container{
+.login-container {
     margin-left: 25vw;
-    margin-right:25vw;
+    margin-right: 25vw;
+}
+
+.container#login {
     margin-top: 25vh;
 }
 
-.container#login{
-    margin-top: 35vh;
-}
-.container#signup{
+.container#signup {
     margin-top: 25vh;
 
 }
 
-#logo{
-    font-size: 5rem;
-    text-align: center; 
-    padding-bottom: 0.5em; 
+#logo {
+    font-size: 4rem;
+    text-align: center;
+    padding-bottom: 0.5em;
     background-color: #f3ec78;
-    background-image: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(104,9,121,1) 25%, rgba(0,212,255,1) 100%);;
+    background-image: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(104, 9, 121, 1) 25%, rgba(0, 212, 255, 1) 100%);
+    ;
     background-size: 100%;
     -webkit-background-clip: text;
     -moz-background-clip: text;
-    -webkit-text-fill-color: transparent; 
+    -webkit-text-fill-color: transparent;
     -moz-text-fill-color: transparent;
 }
 
-.row#row1{
+.row#row1 {
     margin-top: 3%;
     display: grid;
     justify-content: center;
     align-items: center;
 }
 
-.row#row2{
+.row#row2 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -41,7 +42,7 @@
 
 }
 
-.row#login-with{
+.row#login-with {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -49,11 +50,12 @@
     text-align: center;
 }
 
-i#login-icon{
+
+i#login-icon {
     font-size: 25px;
     margin-right: 10px;
 }
 
-button#external-login{
-    display: flex;
+button.btn.btn-secondary.login {
+    margin: 5px;
 }
